// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.admin.domain.v30;

import "google/protobuf/wrappers.proto";
import "scalapb/scalapb.proto";

message SequencerConnection {
  oneof type {
    Grpc grpc = 2;
  }

  string alias = 3;

  message Grpc {
    // connection information to sequencer (http[s]://<host>:<port>")
    repeated string connections = 1;
    // Should the connection use TLS?
    bool transportSecurity = 2;
    google.protobuf.BytesValue customTrustCertificates = 3;
  }
}

message SequencerConnections {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StorageProtoVersion";

  repeated SequencerConnection sequencer_connections = 1;

  // This field determines the minimum level of agreement, or consensus, required among the sequencers before a message
  // is considered reliable and accepted by the system.
  // The value set here should not be zero.
  uint32 sequencerTrustThreshold = 2;
}
